Fix: positioning of 1.5 years graphic on mobile

--- a/styles.css
+++ b/styles.css
@@ -395,4 +395,7 @@ UNDER 480
         margin-left: auto;
         margin-right: auto;
     }
+    .ell-results {
+        margin: 0 auto;
+    }
 }
